# korus-personal-info-chekcer

./: .env.example  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: bandit.yml  ruff.yml
docs/agents/: AGENTS.md  TASKS.md
docs/agents/tasks/data-count-sum-and-output-fix/: PLAN.md  PROGRESS.md  RESEARCH.md  TASK_SUMMARY.md
docs/agents/tasks/fix-rich-markup-error/: TASK_SUMMARY.md
docs/agents/tasks/write-readme-md/: PLAN.md  PROGRESS.md  RESEARCH.md  TASK_SUMMARY.md
src/: config.py  display.py  main.py  utils.py
src/checkers/: download_reason_checker.py  login_checker.py  personal_file_checker.py
src/mode/: login_checker.py  personal_file_checker.py  personal_file_download.py
