[project]
name = "korus-personal-info-checker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "holidays>=0.73",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.1.0",
    "rich>=13.0.0",
    "xlrd>=2.0.1",
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "bandit", "pandas-stubs", "types-openpyxl", "types-python-dateutil", "pre-commit"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "SIM"]

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
